# ubi-minimal-perf-demo

./: Dockerfile_ubi8  Dockerfile_ubi9  README.md  pyproject.toml
demo/demo/: gunicorn.py  settings.py  urls.py  views.py  wsgi.py
results/2022-09-29T20.31.35/: ubi8-demo-ab.txt  ubi8-demo-logs.txt  ubi9-demo-ab.txt  ubi9-demo-logs.txt
results/2022-09-29T21.02.31/: ubi8-demo-ab.txt  ubi8-demo-logs.txt  ubi9-demo-ab.txt  ubi9-demo-logs.txt
results/2022-09-29T21.12.20/: ubi8-demo-ab.txt  ubi8-demo-logs.txt  ubi9-demo-ab.txt  ubi9-demo-logs.txt
