[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Brad Smith <bradster@infinitewarp.com>"]
readme = "README.md"
packages = [{include = "demo"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.15"
watchtower = "3.0.0"
boto3 = "1.24.52"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
